--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_lints: ^3.0.1
   carousel_slider: ^4.2.1
   url_launcher: ^6.2.4
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
