--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   carousel_slider: ^4.2.1
   url_launcher: ^6.2.4
   intl: ^0.19.0
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
