--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_lints: ^3.0.1
   google_fonts: ^6.1.0
   http: ^1.2.0
+  image_picker: ^1.0.7
   intl: ^0.19.0
   url_launcher: ^6.2.4
 
