--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_lints: ^3.0.1
+  flutter_secure_storage: ^9.0.0
   google_fonts: ^6.1.0
   http: ^1.2.0
   image_picker: ^1.0.7
